--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,42 @@
+.todo{
+  border: 4px solid black;
+  width: 300px;
+  height: 300px;
+  top: 140px;
+  left: 110px;
+  position: absolute;
+ 
+  
+}
+.Done{
+  border: 4px solid black;
+  width: 300px;
+  height: 300px;
+  top: 140px;
+  left: 850px;
+  position: absolute;
+}
+.task{
+  width:200px;
+  height:200px;
+  cursor:pointer;
+}
+.inProgress{
+  border: 4px solid black;
+  width: 300px;
+  height: 300px;
+  margin-left: 510px;
+  top: 140px;
+  position: absolute;
+
+}
+.progress{
+  /*display: block;*/
+  position: relative;
+  margin-left: 400px;
+  width: 300px;
+
+}
 .App {
   text-align: center;
 }
